// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Keyboard change onKeyDown 1`] = `
<span>
  content
</span>
`;

exports[`Keyboard change onKeyDown 2`] = `
<span>
  content
</span>
`;

exports[`Keyboard onDown 1`] = `
<div>
  <span>
    content
  </span>
</div>
`;

exports[`Keyboard onKeyDown 1`] = `
<div>
  <span>
    content
  </span>
</div>
`;
